# clang-format-tidy

./: .clang-tidy  CMakeLists.txt  main.cpp
